layout and refactoring

--- a/app/client/app.styl
+++ b/app/client/app.styl
@@ -6,5 +6,11 @@ body
 	z-index: 99999
 
 .functions
+	width: 100%
 	td 
 		padding: 4px
+.navbar-header
+	.logo
+		height: 52px
+		float: left
+		padding-right: 8px
