added title changed title edit mode changed stuff to english

--- a/app/client/app.styl
+++ b/app/client/app.styl
@@ -2,6 +2,24 @@ body
 	padding-top: 60px
 	
 
+	
+
+h1.pageTitle
+	font-family: 'Monsieur La Doulaise', cursive
+	font-size: 112px
+	@media screen and (max-width: 480px)
+		font-size: 64px
+	
+	vertical-align: bottom
+	margin-bottom: 48px
+	img
+		padding-right: 16px
+		height: 148px
+		@media screen and (max-width: 480px)
+			height: 96px
+		
+
+
 .modal-dialog
 	z-index: 99999
 
