added background color

--- a/app/client/app.styl
+++ b/app/client/app.styl
@@ -1,5 +1,6 @@
 body
 	padding-top: 60px
+	background-image: url(/bg.png)
 	
 
 	
@@ -18,7 +19,8 @@ h1.pageTitle
 		@media screen and (max-width: 480px)
 			height: 96px
 		
-
+.jumbotron
+	background-color: white
 
 .modal-dialog
 	z-index: 99999
