--- a/app/client/app.styl
+++ b/app/client/app.styl
@@ -18,7 +18,8 @@ h1.pageTitle
 		height: 148px
 		@media screen and (max-width: 480px)
 			height: 96px
-		
+.clear
+	clear: both	
 .jumbotron
 	background-color: white
 
@@ -34,7 +35,18 @@ h1.pageTitle
 		height: 52px
 		float: left
 		padding-right: 8px
-
+.onePlot
+	.panel-heading
+		position: relative
+		.btn-delete
+			position: absolute
+			right: 10px
+			top: 9px
+.engineControls
+	.buttons
+		float: left
+	.time
+		float: right
 .loading
 	text-align: center
 	img 
