added plot options for x_t plot

--- a/app/client/app.styl
+++ b/app/client/app.styl
@@ -42,6 +42,9 @@ h1.pageTitle
 			position: absolute
 			right: 10px
 			top: 9px
+	.autoform-array-item .form-group label
+		display: none;
+	
 .engineControls
 	.buttons
 		float: left
