added delay added nightmode fixed some minor bugs updated meteor

--- a/app/client/app.styl
+++ b/app/client/app.styl
@@ -3,7 +3,11 @@ body
 	background-image: url(/bg.png)
 	
 
-	
+html.nightMode
+	-webkit-filter: invert(1);
+
+a
+	cursor: pointer;	
 
 h1.pageTitle
 	font-family: 'Monsieur La Doulaise', cursive
