added buttons in header

--- a/app/client/app.styl
+++ b/app/client/app.styl
@@ -59,6 +59,18 @@ h1.pageTitle
 	img 
 		width: 275px
 
+.navbar .engineControls
+	float: left
+
+	margin-top: 8px
+	.time
+		color: white
+		padding-left: 8px
+		padding-top: 8px 
+	.btn
+		border-style: dashed
+		background-color:transparent
+
 *[data-toggle="collapse"]
 {
 	cursor: row-resize
