fixed boostrap login buttons

--- a/app/client/app.styl
+++ b/app/client/app.styl
@@ -22,6 +22,19 @@ h1.pageTitle
 		height: 148px
 		@media screen and (max-width: 480px)
 			height: 96px
+
+// bootstrap fix
+#login-dropdown-list
+	
+	list-style: none;
+	.dropdown-menu
+		li
+			padding-bottom: 4px
+			a
+				padding: 0px
+				.btn
+					width:100%
+	
 .clear
 	clear: both	
 .jumbotron
