--- a/app/client/app.styl
+++ b/app/client/app.styl
@@ -5,7 +5,9 @@ body
 
 html.nightMode
 	-webkit-filter: invert(1);
-
+	-ms-filter: invert(1);
+	-moz-filter: invert(1);
+	filter: invert(1);
 a
 	cursor: pointer;	
 
@@ -34,7 +36,7 @@ h1.pageTitle
 				padding: 0px
 				.btn
 					width:100%
-	
+
 .clear
 	clear: both	
 .jumbotron
